--- a/style.css
+++ b/style.css
@@ -1,60 +1,34 @@
 body
 {
-    background-image: -webkit-radial-gradient(black, rgb(1, 8, 39), rgb(0, 3, 93), rgb(3, 164, 0));
-}
-#google
-{
-height: 45px;
-width: auto;
-}
-#mobile
-{
-height: 45px;
-width: auto;
+    background-image: -webkit-linear-gradient(black, rgb(0, 3, 93), rgb(164, 0, 0));
 }
 .heading
 {
-  font-size: 23px;
-  width: 100%;
-  margin: 0px;
-  box-shadow:5px 5px 5px grey;
+    font-size: 23px;
+    width: 100%;
+    margin: 0px;
+    box-shadow: 5px 5px 5px grey;
 }
-.copy_right_footer {
-  position: fixed;
-  color: white;
-  bottom: 0;
-  width: 100%;
-  background-color:grey;
-  line-height: 3;
-  text-align: center;
-}
-#one
+.note
 {
-    height: 200px;
-    width: auto;
+   font-size: 15px;
+   color: black;
 }
-#two
-{
-    height: 200px;
-    width: auto;
-}
-#three
-{
-    height: 200px;
-    width: auto;
-}
-#four
-{
-    height: 200px;
-    width: auto;
-}
-#five
-{
-    height: 200px;
-    width: auto;
-}
-#ao, #bo, #co, #do, #eo
-{
-   font-size: large;
-   color: aliceblue;
-}
+.copy_right_footer
+ {
+    position: fixed;
+    color: white;
+    bottom: 0;
+    width: 100%;
+    background-color:rgb(0, 0, 0);
+    line-height: 3;
+    text-align: center;
+ }
+ canvas
+ {
+    border: 5px solid gainsboro;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px grey;
+ }
+
+ 
